--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -182,7 +182,7 @@
       <img class="l" src="img/photo/hok.jpg" alt="Hokkaido"><br>
     </div>
     <div class="photo-cell">
-      <img class="r" src="img/photo/tok2.jpg" alt="Tokyo3"><br>
+      <img class="r" src="img/photo/tok2.JPG" alt="Tokyo3"><br>
     </div>
     <div class="photo-cell">
       <img class="f" src="img/photo/fuy.jpg" alt="FuYang"><br>
