--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -14,13 +14,13 @@
      } else {
          x.style.display = "none";
      }
- }
+  }
  </script>
-<style>
-.me {
-  width: 100%;
-}
-#image{
+ <style>
+  .me {
+    width: 100%;
+  }
+  #image{
       line-height:1000px;
       width: 450px;
     	height: 450px;
@@ -41,25 +41,9 @@
   a{
     color: #FF6969;
   }
-  #main-content h1 {
-text-align: center;
-margin-left: 5%;
-margin-top: 5%;
-margin-bottom: 5%;
-font-size: 2em;
-}
-
-#main-content h2 {
-text-align: center;
-}
-
-#main-content p {
-margin-top: 5%;
-margin-bottom: 5%;
-}
   </style>
-
 </head>
+
 <body>
   <header>
     <nav id = "top-nav" class="top-nav">
@@ -79,40 +63,40 @@ margin-bottom: 5%;
   </header>
 
   <div id="main-content" class="main-content main-content-home">
-    <h1>Hi, I'm Yao.</h1>
-    <h2>A <a href="http://www.yaojiahua.com/">UX designer</a> born and raised in <a href="https://en.wikipedia.org/wiki/Hangzhou">Hangzhou, China</a>.</h2>
-    <br><br>
+    <h2 class="intro">Hi, I'm Yao.</h2>
+    <h3>A <a href="http://www.yaojiahua.com/">UX designer</a> born and raised in <a href="https://en.wikipedia.org/wiki/Hangzhou">Hangzhou, China</a>.</h3>
+    <br><br><br>
     <img class="me" src="img/me2 copy.jpg" alt="Me"><br>
     <br><br><br><br>
 
-    <section class="crafts">
-      <h2>Things I love:
+  <section class="crafts">
+    <h2>Things I love:
         <span class = "text" src="img/travel.jpg" alt="Flight">travel</span>,
         <span class = "text" src="img/guggenheim.jpg" alt="Solomon R. Guggenheim Museum">museums</span>,
         <span class = "text" src="img/bloom.jpg" alt="Bloom - Beach House">dream pop</span>,
         <span class = "text" src="img/stripes.jpg" alt="Stripes">stripes</span>,
         <span class = "text" src="img/sushi.jpg" alt="Favorite Sushi Place">sushi</span>,
         <span class = "text" src="img/pug.jpg" alt="A Pug on Instagram">pugs</span>.</h2>
-    <div id="image"></div>
+   <div id="image"></div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript">
-	$(document).ready(function() {
-		$(".text").on('focus mouseover', function() {
-			$("#image").text($(this).attr("alt"));
-			$("#image").css('background-image', 'url("' + $(this).attr("src") +'")');
-		})
-		$(".text").on('blur mouseleave', function() {
-			$("#image").text("");
-			$("#image").css('background-image', 'url(img/hover.png)');
-		})
-	});
-	</script>
-</section>
-  </div>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script type="text/javascript">
+	 $(document).ready(function() {
+		 $(".text").on('focus mouseover', function() {
+			 $("#image").text($(this).attr("alt"));
+			 $("#image").css('background-image', 'url("' + $(this).attr("src") +'")');
+		 })
+		 $(".text").on('blur mouseleave', function() {
+			 $("#image").text("");
+	 		 $("#image").css('background-image', 'url(img/hover.png)');
+	 	 })
+	 });
+	 </script>
+  </section>
+ </div>
 
-  <footer>
-    <div class="footer">
+ <footer>
+  <div class="footer">
     <nav>
       <p><a href="index.html">Home</a>
       <a href="photography.html">Photography</a>
@@ -120,7 +104,9 @@ margin-bottom: 5%;
       <a href="about.html">About</a></p>
     </nav>
     <p>&copy;2018 Yaojia Hua</p>
-  </div>
-  </footer>
+   </div>
+ </footer>
 
 </body>
+
+</html>
