--- a/portfolio/travel.html
+++ b/portfolio/travel.html
@@ -4,8 +4,8 @@
   <title> Travel ~ Yaojia Hua</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/responsive.css" charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css" >
+	<link rel="stylesheet" type="text/css" href="css/responsive.css" >
   <script>
    function menu() {
      var x = document.getElementById("dropdown");
@@ -40,7 +40,7 @@
       <div class="logo">
         <a href="index.html"> <img src="img/HUA.png" alt="yaojia's logo"></a>
       </div>
-      <img class="menu" src="img/menu.png" onclick="menu()">
+      <img class="menu" src="img/menu.png" alt="menu" onclick="menu()">
       <div id="dropdown">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -58,7 +58,7 @@
   <h3>Yes, I know I'm crazy.</h3>
   <br><br><br>
   <div class="videoWrapper">
-    <iframe src="https://player.vimeo.com/video/262669339" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/262669339" width="640" height="360" allowfullscreen></iframe>
   </div>
   <br><br><br><br>
 
