--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -4,8 +4,8 @@
   <title>About ~ Yaojia Hua</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/responsive.css" charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
   <script>
   function menu() {
      var x = document.getElementById("dropdown");
@@ -50,7 +50,7 @@
       <div class="logo">
         <a href="index.html"> <img src="img/HUA.png" alt="yaojia's logo"></a>
       </div>
-      <img class="menu" src="img/menu.png" onclick="menu()">
+      <img class="menu" src="img/menu.png" alt="menu" onclick="menu()">
       <div id="dropdown">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -66,17 +66,17 @@
     <h2 class="intro">Hi, I'm Yao.</h2>
     <h3>A <a href="http://www.yaojiahua.com/">UX designer</a> born and raised in <a href="https://en.wikipedia.org/wiki/Hangzhou">Hangzhou, China</a>.</h3>
     <br><br><br>
-    <img class="me" src="img/me2 copy.jpg" alt="Me"><br>
+    <img class="me" src="img/me2.jpg" alt="Me"><br>
     <br><br><br><br>
 
   <section class="crafts">
     <h3>Things I love:
-        <span class = "text" src="img/travel.jpg" alt="Flight">travel</span>,
-        <span class = "text" src="img/guggenheim.jpg" alt="Solomon R. Guggenheim Museum">museums</span>,
-        <span class = "text" src="img/bloom.jpg" alt="Bloom - Beach House">dream pop</span>,
-        <span class = "text" src="img/stripes.jpg" alt="Stripes">stripes</span>,
-        <span class = "text" src="img/sushi.jpg" alt="Favorite Sushi Place">sushi</span>,
-        <span class = "text" src="img/pug.jpg" alt="A Pug on Instagram">pugs</span>.</h3>
+        <span><a class = "text" src="img/travel.jpg" alt="Flight">travel</a></span>,
+        <span><a class = "text" src="img/guggenheim.jpg" alt="Solomon R. Guggenheim Museum">museums</a></span>,
+        <span><a class = "text" src="img/bloom.jpg" alt="Bloom - Beach House">dream pop</a></span>,
+        <span><a class = "text" src="img/stripes.jpg" alt="Stripes">stripes</a></span>,
+        <span><a class = "text" src="img/sushi.jpg" alt="Favorite Sushi Place">sushi</a></span>,
+        <span><a class = "text" src="img/pug.jpg" alt="A Pug on Instagram">pugs</a></span>.</h3>
    <div id="image"></div>
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
