--- a/portfolio/photography.html
+++ b/portfolio/photography.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/style.css" charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="css/responsive.css" charset="UTF-8">
-  <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
-  <script src="js/jssor.slider-27.1.0.min.js" type="text/javascript"></script>
-  <script type="text/javascript">
+  <link rel="stylesheet" type="text/css" href="css/style.css" >
+	<link rel="stylesheet" type="text/css" href="css/responsive.css" >
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/jssor.slider-27.1.0.min.js"></script>
+  <script>
   // menu
     function menu() {
        var x = document.getElementById("dropdown");
@@ -88,7 +88,7 @@
 			<div class="logo">
         <a href="index.html"> <img src="img/HUA.png" alt="yaojia's logo"></a>
       </div>
-      <img class="menu" src="img/menu.png" onclick="menu()">
+      <img class="menu" src="img/menu.png" alt="menu" onclick="menu()">
       <div id="dropdown">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -108,26 +108,26 @@
    <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:480px;overflow:hidden;visibility:hidden;">
         <!-- Loading Screen -->
         <div data-u="loading" class="jssorl-009-spin" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-color:rgba(0,0,0,0.7);">
-            <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" />
+            <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/spin.svg" alt="spin"/>
         </div>
         <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:480px;overflow:hidden;">
             <div data-p="137.50">
-                <img data-u="image" src="img/tokyo.jpg" />
+                <img data-u="image" src="img/tokyo.jpg" alt="Tokyo" />
             </div>
             <div data-p="137.50">
-                <img data-u="image" src="img/a2.jpg" />
+                <img data-u="image" src="img/a2.jpg" alt="Ann Arbor" />
             </div>
             <div data-p="137.50">
-                <img data-u="image" src="img/edinburg.jpg" />
+                <img data-u="image" src="img/edinburg.jpg" alt="Edinburg" />
             </div>
             <div data-p="137.50">
-                <img data-u="image" src="img/sf.jpg" />
+                <img data-u="image" src="img/sf.jpg" alt="San Francisco"/>
             </div>
             <div data-p="137.50">
-                <img data-u="image" src="img/london.jpg" />
+                <img data-u="image" src="img/london.jpg" alt="London"/>
             </div>
             <div data-p="137.50">
-                <img data-u="image" src="img/shanghai.jpg" />
+                <img data-u="image" src="img/shanghai.jpg" alt="Shanghai"/>
             </div>
         </div>
         <!-- Bullet Navigator -->
