--- a/portfolio/travel.html
+++ b/portfolio/travel.html
@@ -30,6 +30,7 @@
 	  left: 0;
 	  width: 100%;
 	  height: 100%;
+    border: 0;
    }
   </style>
 </head>
@@ -58,7 +59,7 @@
   <h3>Yes, I know I'm crazy.</h3>
   <br><br><br>
   <div class="videoWrapper">
-    <iframe src="https://player.vimeo.com/video/262669339" width="640" height="360" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/262669339" width="640" height="360"  allowfullscreen></iframe>
   </div>
   <br><br><br><br>
 
